--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -6,6 +6,8 @@ permalink: /talks/2013-03-01-tutorial-1
 venue: "UC-Berkeley Institute for Testing Science"
 date: 2013-03-01
 location: "Berkeley, CA, USA"
+longitude: 38.92
+latitude: 119.992
 ---
 
 [More information here](http://exampleurl.com)
