--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -6,6 +6,8 @@ permalink: /talks/2014-02-01-talk-2
 venue: "London School of Testing"
 date: 2014-02-01
 location: "London, UK"
+longitude: 38.92
+latitude: 119.992
 ---
 
 [More information here](http://example2.com)
