--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -3,7 +3,7 @@ title: "Talk 2 on Relevant Topic in Your Field"
 collection: talks
 type: "Talk"
 permalink: /talks/2014-02-01-talk-2
-venue: "London School of Testing"
+venue: "London School of Testing and Friendliness"
 date: 2014-02-01
 location: "London, UK"
 longitude: 38.92
